topnav, styles.css

--- a/kriteerit.html
+++ b/kriteerit.html
@@ -2,8 +2,16 @@
 <html>
     <head>
         <title>Arviointikriteerit</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="etusivu.html">Etusivu</a>
+            <a class="active" href="kriteerit.html">Arviointikriteerit</a>
+            <a href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
+            <a href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
+            <a href="tutkinnonosat.html">Tutkinnonosat</a>
+        </div>
         <h1>Arviointikriteerit</h1>
         <ol>
             <li>Tyydyttävä
