--- a/tutkinnon-muodostuminen.html
+++ b/tutkinnon-muodostuminen.html
@@ -2,8 +2,16 @@
 <html>
     <head>
         <title>Tutkinnon muodostuminen</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="etusivu.html">Etusivu</a>
+            <a href="kriteerit.html">Arviointikriteerit</a>
+            <a href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
+            <a class="active" href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
+            <a href="tutkinnonosat.html">Tutkinnonosat</a>
+        </div>
         <h1>Tutkinnon muodostuminen</h1>
         <p>
             Tieto- ja viestintätekniikan perustutkinnon laajuus on 180 osaamispistettä. 
