--- a/etusivu.html
+++ b/etusivu.html
@@ -2,8 +2,16 @@
 <html>
     <head>
         <title>Datamonnit</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="etusivu.html">Etusivu</a>
+            <a href="kriteerit.html">Arviointikriteerit</a>
+            <a href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
+            <a href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
+            <a href="tutkinnonosat.html">Tutkinnonosat</a>
+        </div>
         <h1>Datamonnit</h1>
         <h3>Tutkinnon suorittaneen osaaminen</h3>
         <p>
