--- a/osaamisen-arviointi.html
+++ b/osaamisen-arviointi.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        ><title>Osaamisen arviointi</title>
+        <title>Osaamisen arviointi</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="etusivu.html">Etusivu</a>
+            <a href="kriteerit.html">Arviointikriteerit</a>
+            <a class="active" href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
+            <a href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
+            <a href="tutkinnonosat.html">Tutkinnonosat</a>
+        </div>
         <h1>Osaamisen arviointi</h1>
         <p>
             Ammatilliset tutkinnon osat arvioidaan asteikolla 1–5 tutkinnon osan 
