--- a/tutkinnonosat.html
+++ b/tutkinnonosat.html
@@ -2,8 +2,16 @@
 <html>
     <head>
         <title>Tutkinnonosat</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <html>
+    <body>
+        <div class="topnav">
+            <a href="etusivu.html">Etusivu</a>
+            <a href="kriteerit.html">Arviointikriteerit</a>
+            <a href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
+            <a href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
+            <a class="active" href="tutkinnonosat.html">Tutkinnonosat</a>
+        </div>
         <h1>Tutkinnonosat</h1>
         <h3>Tieto- ja viestintätekniikan perustehtävät, 25 osp</h3>
         <p>Koodi: 106413</p>
@@ -127,5 +135,5 @@
                 </ul>
             </li>
         </ul>
-    </html>
+    </body>
 </html>
