--- a/tutkinnonosat.html
+++ b/tutkinnonosat.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="etusivu.html">Etusivu</a>
+            <a href="index.html">Etusivu</a>
             <a href="kriteerit.html">Arviointikriteerit</a>
             <a href="osaamisen-arviointi.html">Osaamisen-arvionti</a>
             <a href="tutkinnon-muodostuminen.html">Tutkinnon-muodostuminen</a>
